Fixed stretched avatars

--- a/src/app/tab1/editing/editing.page.scss
+++ b/src/app/tab1/editing/editing.page.scss
@@ -52,6 +52,8 @@ ion-footer {
 
   border: solid 2px #2F4858;
   scale: 1.5;
+
+  margin-top: 2rem;
 }
 
 .navbarImage {
