--- a/src/app/tab3/chat/chat.page.scss
+++ b/src/app/tab3/chat/chat.page.scss
@@ -130,7 +130,7 @@ ion-list {
 
       &.me {
         margin-left: auto;
-        margin-right: 32px;
+        margin-right: -8px;
         background-color: #DCF8C6;
       }
 
